tests/hole_type_alias_bad.stderr
tests/hole_type_alias_bad.hop:2:6: error: HOP2007: identifier '_' is reserved
