tests/hole_type_alias_bad.hop
// Verifies hole type alias is rejected.
type _ int
